--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <%= render "layouts/header" %>  
 <main>
    <div class="container">
+    <%= render "layouts/flash" %>
     <%= yield %>
    </div>
 </main>
